SNOW-1055755: fix typo

--- a/.github/workflows/packaging.yaml
+++ b/.github/workflows/packaging.yaml
@@ -40,4 +40,4 @@ jobs:
         run: |
           hatch run packaging:build
           cd ./dist/snow/
-          zip -g ../../snow-${{ github.sha }}-${{ matrox.os }}.zip -r
+          zip -g ../../snow-${{ github.sha }}-${{ matrix.os }}.zip -r
