--- a/scripts/packaging/docker-compose.yaml
+++ b/scripts/packaging/docker-compose.yaml
@@ -3,3 +3,19 @@ services:
     build: .
     volumes:
       - ../../:/snowflake-cli
+  centos:
+    image: centos:latest
+    container_name: centos
+    command: tail -f /dev/null
+    tty: true
+    stdin_open: true
+    volumes:
+      - ../../:/data
+  fedora39:
+    image: fedora:39
+    container_name: centos
+    command: tail -f /dev/null
+    tty: true
+    stdin_open: true
+    volumes:
+      - ../../:/data
