SNOW-1055755: windows build debug - wix installer bundle - fix cli_version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ build-all = [
   "./scripts/packaging/build_binaries.sh",
   "./scripts/packaging/build_packages.sh",
 ]
+win-build-version = ["python ./scripts/packaging/win/build_version.py"]
 
 [tool.hatch.envs.e2e]
 template = "e2e"
