--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,7 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies: [types-pkg-resources==0.1.3, types-all==1.0.0]
+        args: [--explicit-package-bases]
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.4
     hooks:
