--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "snowflake-cli-labs"
+name = "snowflake-cli"
 authors = [{ name = "Snowflake Inc." }]
 license = { file = "LICENSE" }
 dynamic = ["version"]
@@ -78,7 +78,7 @@ exclude_also = ["@(abc\\.)?abstractmethod", "@(abc\\.)?abstractproperty"]
 path = "src/snowflake/cli/__about__.py"
 
 [tool.hatch.build.targets.sdist]
-exclude = ["/.github"]
+exclude = ["/.github", "/.compat"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/snowflake"]
@@ -93,6 +93,7 @@ test-cov = [
   "coverage run --source=snowflake.cli --module pytest -m loaded_modules tests/ ",
   "coverage report",
 ]
+legacy-pypi-build = [".compat/build_snowflake-cli-labs.sh"]
 
 [tool.hatch.envs.e2e]
 template = "e2e"
@@ -119,9 +120,15 @@ pre-install-commands = [
 features = ["development"]
 
 [tool.hatch.envs.integration.scripts]
-test = ["pytest -m integration -n6 --dist=worksteal --deflake-test-type=integration --ignore=tests_integration/spcs"]
-test-spcs = ["pytest -m integration -n6 --dist=worksteal --deflake-test-type=integration tests_integration/spcs"]
-test_qa = ["pytest -m 'integration and not no_qa' -n6 --dist=worksteal --deflake-test-type=integration"]
+test = [
+  "pytest -m integration -n6 --dist=worksteal --deflake-test-type=integration --ignore=tests_integration/spcs",
+]
+test-spcs = [
+  "pytest -m integration -n6 --dist=worksteal --deflake-test-type=integration tests_integration/spcs",
+]
+test_qa = [
+  "pytest -m 'integration and not no_qa' -n6 --dist=worksteal --deflake-test-type=integration",
+]
 
 [[tool.hatch.envs.local.matrix]]
 python = ["3.10", "3.11", "3.12"]
