SNOW-1639544: snowflake-cli tests update

--- a/test_external_plugins/broken_plugin/pyproject.toml
+++ b/test_external_plugins/broken_plugin/pyproject.toml
@@ -19,9 +19,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "override-build-in-commands"
 requires-python = ">=3.8"
-dependencies = [
-    "snowflake-cli-labs>=2.0.0"
-]
+dependencies = ["snowflake-cli>=2.0.0"]
 version = "0.0.1"
 
 [project.entry-points."snowflake.cli.plugin.command"]
