--- a/test_external_plugins/override_build_in_command/pyproject.toml
+++ b/test_external_plugins/override_build_in_command/pyproject.toml
@@ -19,9 +19,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "override-build-in-commands"
 requires-python = ">=3.8"
-dependencies = [
-    "snowflake-cli-labs>=1.1.0"
-]
+dependencies = ["snowflake-cli>=1.1.0"]
 version = "0.0.1"
 
 [project.entry-points."snowflake.cli.plugin.command"]
